Fix in RDoc format

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,18 +1,10 @@
 = RailsRealFavicon
 
-Create a multi-platform favicon for your Ruby on Rails project with
-RealFaviconGenerator.
+Create a multi-platform favicon for your Ruby on Rails project with RealFaviconGenerator.
 
 To use this Rails plugin:
 
-<ul>
-  <li>
-    Go to <a href="http://realfavicongenerator.net/">RealFaviconGenerator</a>,
-    submit your image and craft your icons.
-    <img src="https://cloud.githubusercontent.com/assets/423852/11431579/88a71cb0-949b-11e5-9dd4-3cf57f4e3b1a.png"/>
-  </li>
-  <li>
-    In the result page, click the Ruby on Rails tab and follow the instructions.
-    <img src="https://cloud.githubusercontent.com/assets/423852/11431581/8c0ab45c-949b-11e5-9b4a-c3a2beba0180.png"/>
-  </li>
-</ul>
+* Go to http://realfavicongenerator.net, submit your image and craft your icons.
+https://cloud.githubusercontent.com/assets/423852/11431579/88a71cb0-949b-11e5-9dd4-3cf57f4e3b1a.png
+* In the result page, click the Ruby on Rails tab and follow the instructions.
+https://cloud.githubusercontent.com/assets/423852/11431581/8c0ab45c-949b-11e5-9b4a-c3a2beba0180.png
